--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=MultiBoardTone
 version=1.0
 author=Ricky El-Qasem <info@youmakerobots.com>
 maintainer=Ricky El-Qasem <info@youmakerobots.com>
-sentence=Allows You to generate tones regardless of which Arduino
+sentence=Allows You to generate tones regardless of which Arduino.
 paragraph=The existing examples of how to generate a tone on arduino varies depending which board you have. MultiBoardTone allows you to choose a function depending which board you have.
-category=tone generator
+category=Signal Input/Output
 url=https://www.youmakerobots.com
 architectures=*
